<resources>
    <string name="app_name">RateIT</string>
    <string name="title_activity_insert_anew_product_page">InsertANewProductPage</string>
    <string name="title_activity_login_page">LoginPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="InsertProductPage">Spinner</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="skip">Skip this step</string>
    <string name="create_account">Create Account</string>
    <string name="button_add">Add a new category</string>
    <string name="go_to_product_catalog">Product Catalog</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="connected_accounts">Connected Accounts</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="general">General</string>
    <string name="location">Location</string>
    <string name="sound">Sound</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="activity">Activity</string>
    <string name="accessibility">Accessibility</string>
    <string name="advanced">Advanced</string>
    <string name="history">History</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="delete_account">Delete Account</string>
    <string name="about">About</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="feedback_contact_us">Feedback / Contact us</string>
    <string name="rules_community_guidelines"><![CDATA[Rules & Community Guidelines]]></string>
    <string name="backup">Backup</string>
    <string name="faq">FAQ</string>
    <string name="english">English</string>
    <string name="light">Light</string>
    <string name="AddCategoryButton">Add Category</string>
    <string name="ChoseCategory">Choose the category:</string>
    <string-array name="food">
        <item>Categories</item>
        <item>Fast-food</item>
        <item>Desert</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>française</item>
        <item>română</item>
    </string-array>

    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
        <item>Default</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sea_food">Sea Food</string>
    <string name="prepared_meals">Prepared Meals</string>
    <string name="sweets">Sweets</string>
    <string name="snacks">Snacks</string>
    <string name="backery">Backery</string>
    <string name="category">Category</string>
    <string name="favourites">Favourites</string>
    <string name="meat">Meat</string>
    <string name="dairy">Dairy</string>
    <string name="juice">Juice</string>
    <string name="username">username</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="profile">\@string/profile</string>
    <string name="bakery">\@string/bakery</string>
    <string name="meals">\@string/meals</string>
    <string name="email">Email</string>
    <string name="email_adress">email adress</string>
    <string name="password">password</string>
    <string name="Password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="repeat_the_password">repeat the password</string>
    <string name="i_agree_with_the_terms_and_conditions">I agree with the terms and conditions</string>
    <string name="i_want_this_account_to_be_public">I want this account to be public</string>
</resources>